# BoutyHunter

./: .gitignore  API_INTEGRATION.md  GUIDE.md  README.md  STRATEGY.md  api_client.py  app.py  bounty_results.csv  config.yaml  constants.py  db.py  hackerone_scraper.mjs  migrate_db.py  opportunity_finder.py  package-lock.json  package.json  pyproject.toml  rate_limiter.py  scanner.py  scoring.py  scraper.py  setup_cron.sh  tui.py
.beads/: config.yaml  interactions.jsonl  metadata.json
docs/tasks/: scraper-improvement.md
scripts/: project_stats.sh
static/css/: style.css
templates/: base.html  changes.html  dashboard.html  programs.html  scans.html  strategy.html
