[project]
name = "boutyhunter"
version = "0.1.0"
description = "Bug bounty opportunity finder with API discovery, change tracking, and temporal scoring"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.32",
    "textual>=6.0",
]

[project.scripts]
boutyhunter = "opportunity_finder:main"
