[project]
name = "boutyhunter"
version = "0.1.0"
description = "Bug bounty opportunity finder with API discovery, change tracking, and temporal scoring"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "lxml>=6.1.1",
    "playwright>=1.60.0",
    "pyyaml>=6.0",
    "requests>=2.32",
    "selenium>=4.44.0",
    "textual>=6.0",
]

[project.scripts]
boutyhunter = "opportunity_finder:main"
